16-ServicesIngressAndNetworkingFundamentals/08-NetworkPoliciesOverview/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}           # selects every Pod in the namespace
  policyTypes:
  - Ingress
  - Egress
  # no ingress/egress rules = deny all in and out
