16-ServicesIngressAndNetworkingFundamentals/08-NetworkPoliciesOverview/networkpolicy-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx            # affected Pods
  policyTypes:
  - Ingress                 # control incoming traffic only
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend     # allowed source
    ports:
    - protocol: TCP
      port: 80
